feat: add comment for smooth video scrolling

--- a/scroll-filtering-with-video/index.html
+++ b/scroll-filtering-with-video/index.html
@@ -9,6 +9,8 @@
   <body>
     <div id="content" style="height: 1000vh"></div>
     <div class="video-container">
+      <!-- it is important than the video is keyframe indexed
+      https://www.reddit.com/r/learnjavascript/comments/c0b82m/map_cursor_position_to_video_time/ -->
       <video id="scroll-video" src="./output.mp4" muted></video>
     </div>
     <div id="cutoff-freq-container">
